2007-05-04  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c:
	* src/hildon-bread-crumb-trail.h: Include hildon-bread-crumb-widget.h
	from the .c file as it's a private file. 

2007-05-03  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-vvolumebar-example.c: The VVolumebar example now
	uses slightly bigger height.

	* src/hildon-font-selection-dialog.c: Adding some checks before
	freeing memory in the font selection dialog.

2007-05-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-font-selection-dialog.c: Adding a small check when
	freeing memory. 

	* src/hildon-wizard-dialog.c: Applying a patch by Iain Holmes to fix
	buttons sensitivity on page switching.

2007-04-27  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c: make the add method handle all the
	internal details of adding a bread crumb to the trail.

2007-04-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.4-1 release]

	* README:
	* configure.ac:
	* debian/changelog: Updating.

	* src/hildon-bread-crumb-trail.h:
	* src/hildon-bread-crumb.h: Changing the API guard to
	HILDON_ENABLE_UNSTABLE_API.

2007-04-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.3-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog:
	* debian/rules:
	* src/hildon-helper.h: Updating.

2007-04-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.2-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog:

2007-04-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* README:
	* configure.ac:
	* src/hildon-helper.h: Small fix to make the package actually compile.

2007-04-25  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.h:
	* src/hildon-bread-crumb.h:

	Guard with ENABLE_UNSTABLE_API. To use the bread crumb you'll need
	to define ENABLE_UNSTABLE_API in the code that includes these headers.
	
2007-04-25  Xan Lopez  <xan.lopez@nokia.com>
	